@@ -3,8 +3,9 @@ dvdbackup (0.1.2-1) UNRELEASED; urgency=low
   * New upstream version
   * Mandatory switches are now gone (closes: #469337, #470049)
   * Update debian/copyright to reflect new upstream
+  * Update debian/rules to reflect new build system
 
- -- Stephen Gran <sgran@debian.org>  Tue, 11 Mar 2008 01:17:00 +0000
+ -- Stephen Gran <sgran@debian.org>  Tue, 11 Mar 2008 02:09:51 +0000
 
 dvdbackup (0.1.1-12) unstable; urgency=low
 
